# omgtrader

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_core_tables.py  0002_add_market_data_source_tables.py  0003_add_data_coverage_table.py  0004_add_stock_pools_and_strategy_fields.py  0005_add_ai_insights_table.py  0006_add_python_strategies_table.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/modules/ai_assistant/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py  models.py  repository.py  router.py  service.py
backend/app/modules/backtests/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/market_data/: ingestion.py  models.py  repository.py  router.py  schemas.py  service.py  validators.py
backend/app/modules/results/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/strategies/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/services/backtest_engine/: execution.py  fees.py  limits.py  metrics.py  portfolio.py  signals.py  snapshots.py
backend/app/services/data_providers/: base.py  free_source.py  token_source.py
backend/omgtrader_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_migrations.py
backend/tests/modules/ai_assistant/: test_ai_insights_api.py
backend/tests/modules/auth/: test_login_api.py
(+82 files in other folders)
